Fixed spacing issue on read more link under ussd blog section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -760,6 +760,8 @@ a:hover{
     }
     .home-blog-post-link{
         padding-left:60px;
+        margin-top:10px;
+        margin-bottom:50px;
     }
     .blog-post-content h1{
         padding-top:35px;
